mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        #volumeMounts:
          #- name: db
            #mountPath: /var/lib/mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
